gen/servicebroker/v1beta1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-servicebroker1_beta1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/servicebroker/v1beta1/lib)
error[E0423]: expected value, found struct `brokers::BrokersActions`
   --> gen/servicebroker/v1beta1/lib/src/lib.rs:894:13
    |
894 |             brokers::BrokersActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `brokers::BrokersActions { /* fields */ }`?

error[E0423]: expected value, found struct `instances::InstancesActions`
   --> gen/servicebroker/v1beta1/lib/src/lib.rs:970:17
    |
970 |                 instances::InstancesActions
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instances::InstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `v_2::V2Actions`
   --> gen/servicebroker/v1beta1/lib/src/lib.rs:974:17
    |
974 |                 v_2::V2Actions
    |                 ^^^^^^^^^^^^^^ did you mean `v_2::V2Actions { /* fields */ }`?

error[E0423]: expected value, found struct `bindings::BindingsActions`
    --> gen/servicebroker/v1beta1/lib/src/lib.rs:1539:21
     |
1539 |                     bindings::BindingsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `bindings::BindingsActions { /* fields */ }`?

error[E0423]: expected value, found struct `catalog::CatalogActions`
    --> gen/servicebroker/v1beta1/lib/src/lib.rs:2497:21
     |
2497 |                     catalog::CatalogActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `catalog::CatalogActions { /* fields */ }`?

error[E0423]: expected value, found struct `service_instances::ServiceInstancesActions`
    --> gen/servicebroker/v1beta1/lib/src/lib.rs:2501:21
     |
2501 |                     service_instances::ServiceInstancesActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `service_instances::ServiceInstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `service_bindings::ServiceBindingsActions`
    --> gen/servicebroker/v1beta1/lib/src/lib.rs:2889:25
     |
2889 |                         service_bindings::ServiceBindingsActions
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `service_bindings::ServiceBindingsActions { /* fields */ }`?

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-servicebroker1_beta1`.

To learn more, run the command again with --verbose.
